# simpleFastCGIcpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSimpleFastCGIcppRules.cmake
include/: simpleFastCGIcpp.h
src/: CMakeLists.txt  simpleFastCGIcpp.cpp
src/fcgicc-0.1.3/: CHANGES.txt  CMakeLists.txt  LICENSE.txt  README.txt
src/fcgicc-0.1.3/src/: CMakeLists.txt  fcgicc.cc  fcgicc.h
src/fcgicc-0.1.3/test/: CMakeLists.txt  lighttpd.conf  test1.cc  test2.cc
templates/: Doxyfile.in  version.h.in
test/: CMakeLists.txt  main.cpp
